<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/nav_meal_plans"
        android:enabled="true"
        android:icon="@mipmap/ic_meals"
        android:title="@string/nav_title_meal_plans"
        app:showAsAction="always|withText"/>

    <item
        android:id="@+id/nav_meal_planner"
        android:enabled="true"
        android:icon="@mipmap/ic_meal_planner"
        android:title="@string/nav_title_meal_planner"
        app:showAsAction="always|withText"/>

    <item
        android:id="@+id/nav_shopping_list"
        android:enabled="true"
        android:icon="@mipmap/ic_shopping_cart"
        android:title="@string/nav_title_shopping_list"
        app:showAsAction="always|withText"/>

    <item
        android:id="@+id/nav_recipe_list"
        android:enabled="true"
        android:icon="@mipmap/ic_recipes"
        android:title="@string/nav_title_recipe_list"
        app:showAsAction="always|withText"/>

    <item
        android:id="@+id/nav_user_profile"
        android:enabled="true"
        android:icon="@mipmap/ic_user_account"
        android:title="@string/nav_title_user_profile"
        app:showAsAction="always|withText"/>

</menu>
