<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.SignUpFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        android:padding="16dp"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/iv_forgot_password_screen_app_icon"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="48dp"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/tv_forgot_password_screen_app_name"
            style="@style/MyMealPlannerTextStyle.H1Titles.White"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:text="@string/app_name" />

        <TextView
            android:id="@+id/tv_forgot_password_screen_forgot_pass_title"
            style="@style/MyMealPlannerTextStyle.Titles.White"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="24dp"
            android:text="@string/forgot_password_forgot_pass_title" />

        <TextView
            android:id="@+id/tv_forgot_password_screen_reset_pass_description"
            style="@style/MyMealPlannerTextStyle.TableTitles.White"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:layout_marginTop="32dp"
            android:text="@string/forgot_password_forgot_reset_pass_description" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_forgot_password_screen_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:theme="@style/MyMealPlannerTextInputLayoutTheme" >

            <EditText
                android:id="@+id/et_forgot_password_screen_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_screen_email_hint"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/onColorPrimary"
                android:theme="@style/MyMealPlannerThemeEditTextTheme" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/bt_forgot_password_screen_reset_password"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@color/colorBackground"
            android:text="@string/forgot_password_reset_password_button"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <Button
            android:id="@+id/bt_forgot_password_screen_back"
            style="?android:textAppearanceSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:layout_marginTop="8dp"
            android:text="@string/forgot_password_back_button"
            android:textAllCaps="false"
            android:textColor="@color/onColorPrimary" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/pb_forgot_password_screen_progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:visibility="gone" />

</android.support.design.widget.CoordinatorLayout>