<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/iv_recipe_step_done_checkbox"
        style="@style/MyMealPlannerIconButtons"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/card_shape_rectangle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_recipe_step_number"
        style="@style/MyMealPlannerTextStyle.SubTitles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/recipe_steps_default_step_number"
        app:layout_constraintStart_toEndOf="@+id/iv_recipe_step_done_checkbox"
        app:layout_constraintTop_toTopOf="@+id/tv_recipe_step_short_description" />

    <TextView
        android:id="@+id/tv_recipe_step_short_description"
        style="@style/MyMealPlannerTextStyle.SubTitles.Bold"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:maxLines="1"
        android:text="@string/recipe_steps_default_step_short_description"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/tv_recipe_step_number"
        app:layout_constraintTop_toTopOf="@+id/iv_recipe_step_done_checkbox"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_recipe_step_description"
        style="@style/MyMealPlannerTextStyle.SubTitles"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_marginTop="8dp"
        android:maxLines="10"
        android:text="@string/recipe_steps_default_step_description"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/tv_recipe_step_short_description"
        app:layout_constraintStart_toStartOf="@+id/tv_recipe_step_short_description"
        app:layout_constraintTop_toBottomOf="@+id/tv_recipe_step_short_description" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>